# musicaiz

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CITATION.cff  README.md  TODOs.md  algorithms.html  converters.html  datasets.html  environment.yml  evaluation.html  features.html  genindex.html  glossary.html  harmony.html  implementations.html  index.html  install.html  introduction.html  loaders.html  models.html  objects.inv  plotters.html  py-modindex.html  requirements-docs.txt  requirements.txt  rhythm.html  search.html  searchindex.js  setup.cfg  structure.html  tokenizers.html
.github/workflows/: ci.yml  deploy_docs.yml  pypi_release.yml
_modules/: index.html
_modules/musicaiz/: eval.html  loaders.html
_modules/musicaiz/algorithms/: harmonic_shift.html  key_profiles.html
_modules/musicaiz/converters/: musa_json.html  pretty_midi_musa.html
_modules/musicaiz/features/: graphs.html  harmony.html  pitch.html  (+3 more)
_sources/: algorithms.rst.txt  converters.rst.txt  datasets.rst.txt  evaluation.rst.txt  genindex.rst.txt  glossary.rst.txt  implementations.rst.txt  index.rst.txt  introduction.rst.txt  loaders.rst.txt  models.rst.txt  tokenizers.rst.txt
_sources/auto_examples/: index.rst.txt
_sources/notebooks/: 3-plot.ipynb.txt
_static/: documentation_options.js
_static/css/: custom.css
auto_examples/: index.html
docs/source/: conf.py  features.rst  harmony.rst  index.rst  install.rst  plotters.rst  rhythm.rst  structure.rst
musicaiz/: __init__.py  eval.py  loaders.py  utils.py  version.py  wrappers.py
musicaiz/algorithms/: __init__.py  chord_prediction.py  harmonic_shift.py  key_profiles.py
musicaiz/converters/: __init__.py  musa_json.py  musa_protobuf.py  pretty_midi_musa.py
musicaiz/datasets/: __init__.py  bps_fh.py  configs.py  jsbchorales.py  lmd.py  maestro.py  utils.py
musicaiz/features/: __init__.py  graphs.py  harmony.py  pitch.py  predict_midi.py  rhythm.py  self_similarity.py  structure.py
musicaiz/harmony/: __init__.py  chords.py  intervals.py  keys.py
musicaiz/models/: __init__.py
musicaiz/plotters/: __init__.py  pianorolls.py
musicaiz/rhythm/: __init__.py  quantizer.py  timing.py
musicaiz/structure/: __init__.py  bars.py  instruments.py  notes.py
musicaiz/tokenizers/: __init__.py  cpword.py  encoder.py  mmm.py  one_hot.py  remi.py
notebooks/: 2-write_midi.html  2-write_midi.ipynb  3-plot.html  3-plot.ipynb
tests/: conftest.py
(+84 files in other folders)
